--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.2.7.RELEASE</version>
 	</parent>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -20,14 +19,16 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.12</version>
+		</dependency>
 	</dependencies>
-
 	<properties>
 		<java.version>1.8</java.version>
-		 <start-class>countriesRest.api.Start</start-class>
+		<start-class>countriesRest.api.Start</start-class>
 	</properties>
-
-
 	<build>
 		<plugins>
 			<plugin>
