Api Documentation improved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 jsondoc.version=1.0
 jsondoc.basePath=http://countriesrest.herokuapp.com
 jsondoc.packages[0]=countriesRest.api.countries.controller
+jsondoc.packages[1]=countriesRest.api.beans
 # optional configuration
 jsondoc.playgroundEnabled=true
 jsondoc.displayMethodAs=URI
